# mqtt-insert-bridge

./: LICENSE  config.ini  inserter.py  pyproject.toml
