[tool.poetry]
name = 'mqtt-insert-bridge'
version = '0.0.1'
description = 'Insert data from MQTT to influxdb'
authors = ['Marc Lasch <mlasch@mailbox.org>']

[tool.poetry.dependencies]
python = '^3.8'
aiomqtt = "^1.2.1"
aiorun = "^2023.7.2"
influxdb-client = "^1.38.0"

[build-system]
requires = ["poetry-core>=1.0.8", "setuptools>=42", "wheel"]
build-backend = 'poetry.core.masonry.api'
